# ralph

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  unblock-ready-issues.yml
docs/: prd-git-global-excludes.md  prd.md  roadmap.md
docs/agents/: domain.md  issue-tracker.md
scripts/: release  unblock-ready-issues
src/ralph/: __init__.py  cli.py  config.py  doctor.py  git.py  gitlab.py  jira.py  models.py  runner.py  state.py  templates.py
src/ralph/templates/: bootstrap-prompt.md.j2  context.md.j2  mr_description.md.j2  mr_title.md.j2  status.md.j2  task.md.j2
tests/: test_cli.py  test_config.py  test_doctor.py  test_foundation.py  test_git.py  test_release_script.py  test_unblock_ready_issues.py
