[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-loop"
version = "0.1.0"
description = "Local operator CLI for AI-agent ticket work loops."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Tomasz Kubiak" },
]
dependencies = [
  "jinja2>=3.1",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ralph = "ralph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

